Plugin installation/deinstallation under Windows fixed